<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PersonInfoActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/dsc" />

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/developer_student_clubs"
            android:textSize="26sp"
            android:fontFamily="@font/bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pes_university_ring_road_campus"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:fontFamily="@font/medium"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:id="@+id/addEventgreet"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add_an_event"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/bold"
            android:layout_marginTop="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:hint="@string/event_details"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/Rounded">

            <EditText
                android:id="@+id/eventDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerDomain"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:spinnerMode="dropdown"
            android:background="@drawable/bg_spinner"
            android:dropDownWidth="300dp"
            android:layout_marginTop="15dp"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:paddingStart="14dp"
            android:textAllCaps="false"
            android:textDirection="firstStrong"
            android:popupBackground="@color/white" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/timeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/green"/>



        <Button
            android:id="@+id/uploadImage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:text="@string/select_event_banner"
            android:background="@drawable/rounded_btn"/>

        <Button
            android:id="@+id/selectDate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/select_event_date"
            android:background="@drawable/rounded_btn"/>

        <Button
            android:id="@+id/selectTime"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="Select Event Time"
            android:textAllCaps="false"
            android:background="@drawable/rounded_btn"/>

        <Button
            android:id="@+id/addEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:text="@string/add_event"
            android:background="@drawable/rounded_btn"/>

    </LinearLayout>

</ScrollView>


