<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="187dp"
        app:srcCompat="@drawable/dsc"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="96dp"
        android:contentDescription="@string/logo"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_student_clubs"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="@font/bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pes_university_ring_road_campus"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="@font/medium"
        android:layout_marginTop="3dp"
        />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        app:isDarkTheme="true"
        android:layout_marginTop="30dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/progress"
        />

</LinearLayout>