<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PersonInfoActivity"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/greet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:fontFamily="@font/bold"
            android:layout_marginTop="15dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/blue" />

        <TextView
            android:id="@+id/greet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:fontFamily="@font/bold"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"/>


        <TextView
            android:id="@+id/letUs"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/let_us_know_you_better"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/bold"
            android:layout_marginTop="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/srn_usn"
            android:layout_marginTop="15dp"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SRN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerBranch"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:spinnerMode="dropdown"
            android:background="@drawable/bg_spinner"
            android:dropDownWidth="300dp"
            android:layout_marginTop="15dp"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:paddingStart="14dp"
            android:textDirection="firstStrong"
            android:popupBackground="@color/white" />

        <Spinner
            android:id="@+id/spinnerSemester"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="?attr/dropdownListPreferredItemHeight"
            android:spinnerMode="dropdown"
            android:background="@drawable/bg_spinner"
            android:dropDownWidth="300dp"
            android:layout_marginTop="15dp"
            android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
            android:paddingStart="14dp"
            android:textDirection="firstStrong"
            android:popupBackground="@color/white" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:padding="2dp"
            android:text="@string/i_am_a_student_of_pes_university_and_i_have_read_and_agreed_to_privacy_policy_of_dscpesu_rr" />



        <Button
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:text="@string/agree_and_continue"
            android:background="@drawable/rounded_btn"/>

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/medium"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:layout_gravity="center" />

    </LinearLayout>


</ScrollView>


